<resources>
    <string name="app_name">Доставка</string>
    <string name="title_delivery">Доставка</string>
    <string name="title_cart">Корзина</string>
    <string name="title_profile">Профиль</string>
    <string name="search_hint">Поиск</string>
    <string name="done">Готово</string>
    <string name="add">Добавить</string>
    <string name="order">заказать</string>
    <string name="total">Итого</string>
    <string name="default_customer_name">Гость</string>
    <string name="default_delivery_address">Адрес не указан</string>
    <string name="address_not_selected">Адрес доставки не выбран</string>
    <string name="address_selected_prefix">Адрес доставки: %1$s</string>
</resources>